--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,13 @@
     <div class="container">
         <h1>ECMAScripty 2015 Examples</h1>
         <div class="row">
-            <div id="examplesLog" class="md-3">
+            <div id="logs" class="md-3">
                
             </div>
         </div>
     </div>
+
+    <script type="text/javascript" src="domlogging.js"></script>
 </body>
 
 </html>
