--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     </div>
 
     <script type="text/javascript" src="domlogging.js"></script>
+    <script type="text/javascript" src="es2015_arrow.js"></script>
 </body>
 
 </html>
