Add ES 2015 strings example

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,10 @@
         </div>
     </div>
 
+    <script type="text/javascript" src="../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
     <script type="text/javascript" src="domlogging.js"></script>
     <script type="text/javascript" src="es2015_arrow.js"></script>
+    <script type="text/javascript" src="es2015_strings.js"></script>
 </body>
 
 </html>
