Add ES2015 modules example with browserfy

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="domlogging.js"></script>
     <script type="text/javascript" src="es2015_arrow.js"></script>
     <script type="text/javascript" src="es2015_strings.js"></script>
+    <script type="text/javascript" src="modules_bundle.js"></script>
 </body>
 
 </html>
